# vlm-edge-case-flywheel

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: finetune.yaml  flywheel.yaml  text_anchors.yaml
data/: manifest.json
notebooks/: demo.ipynb
results/: annotation_metrics.json  baseline_metrics.json  finetuned_metrics.json  flywheel_benchmark.json  training_summary.json
scripts/: benchmark_flywheel.py  demo.py  download_data.py  evaluate.py  measure_annotation_reduction.py  run_all_metrics.py  run_baseline.py  run_flywheel.py  train.py
src/data/: augmentations.py  dataset.py  splits.py
src/flywheel/: auto_labeler.py  benchmark.py  router.py  scorer.py
src/model/: clip_wrapper.py  evaluator.py  text_anchors.py  trainer.py
src/utils/: config.py  device.py  logging.py
tests/: test_baseline.py  test_data_pipeline.py  test_finetuning.py  test_flywheel.py  test_metrics.py
