[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-edge-case-flywheel"
version = "0.1.0"
description = "Foundation Model VLM for Autonomous Driving Edge-Case Detection & AI Data Flywheel"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aditya Swaroop"},
]

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.36",
    "open-clip-torch>=2.24",
    "datasets>=2.16",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
